0.0.4 fixed overflow and settings bug

--- a/src/main.css
+++ b/src/main.css
@@ -556,10 +556,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100%;
 }
 
-.w-5\/6 {
-  width: 83.333333%;
-}
-
 .w-full {
   width: 100%;
 }
@@ -570,6 +566,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-12 {
   width: 3rem;
+}
+
+.w-5\/6 {
+  width: 83.333333%;
 }
 
 .w-14 {
@@ -640,6 +640,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .self-start {
   align-self: flex-start;
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 .overflow-y-auto {
@@ -769,6 +773,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .px-4 {
